@@ -477,9 +477,9 @@ static int AIFF_open(Sound_Sample *sample, const char *ext)
     sample->actual.rate = c.sampleRate;
 
     /* Really, sample->total_time = (c.numSampleFrames*1000) c.sampleRate */
-    sample->total_time = (c.numSampleFrames / c.sampleRate) * 1000;
-    sample->total_time += (c.numSampleFrames % c.sampleRate) 
-                       *  1000 / c.sampleRate;
+    internal->total_time = (c.numSampleFrames / c.sampleRate) * 1000;
+    internal->total_time += (c.numSampleFrames % c.sampleRate)
+                             *  1000 / c.sampleRate;
 
     if (c.sampleSize <= 8)
     {
